--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="amount" id="total.amount">$32.79</div>
       </div>
 
-      <div class="reset">RESTE</div>
+      <div class="reset">RESET</div>
 
     </div>
   </div>
