--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
   <div class="logo"><img src="images/logo.svg" alt=""></div>
-  <div class="tip.calculator">
-    <label for="Bill"></label>
+  <div class="tip-calculator">
+    <label for="">Bill</label>
     <input type="number" class="input bill-input" id="bill-input">
     <label for="">Select Tip %</label>
     <div class="tip">
@@ -52,5 +52,6 @@
 
     </div>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
